Refactored login page before user signs in   - consolidated css   - rewrote html to avoid too many div nesting   - rewrote css to avoid elements breaking out of box model

--- a/static/login.scss
+++ b/static/login.scss
@@ -20,6 +20,125 @@ $sectionHeadingBorder: black;
   -webkit-border-radius: $radius;
 }
 
+
+// ------- Browser Reset --------
+
+* { margin: 0px; padding: 0px; }
+
+
+// ------- Wireframe ------------
+
+$pageWidth: 1040px;
+$columnCount: 2;
+
+body {
+  
+  width: $pageWidth;
+  
+  #header, #footer { clear: both; }
+
+  #column_1 { 
+    width:  $pageWidth  * (1/2) - 70; // some nudging compensating for carousel
+    padding-left: 40px;
+    padding-right: 0px;
+  }
+
+  #column_2 {
+    width:  $pageWidth  * (1/2) - 10;
+  }
+
+  .column {
+    float: left;
+    padding: 20px;
+    min-height: 400px;
+  }
+  
+}
+
+
+// ------ Element Defaults ------------------
+
+body {
+  background-color: $backgroundColor;
+  color:$textColor;
+  margin: auto auto;
+  font: 14px Verdana, Arial;
+  padding-top: 40px;
+}
+
+small { font-size: 0.9em; }
+
+// --- Vertical Rythmn
+
+h1, h2, p, div, {
+  margin-bottom: 40px;
+}
+
+// --- Links
+
+a {
+  color: #DFBA69;
+  text-decoration: none;
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+// --- Headlines
+
+h2 { 
+  font-size: 29px; 
+  font-weight: normal;
+}
+
+
+// ------- page level styles ----- */
+
+#header {padding-left: 15px; padding-right: 0px; }
+
+#footer { text-align: center; }
+
+#login { 
+  height: 22px;
+  width: 370px; 
+  margin: 0 auto 10px auto;
+  padding-right: 50px; //nudge nudge
+  clear: both;
+  img {
+    display:block;
+    float: left;
+  }
+  span {
+    height: 22px;
+    display: block;
+    line-height: 22px;
+    float: left;
+    padding: 0 5px 0 5px;
+  }
+}
+
+h2#getStarted{
+  width: 220px;
+  margin: {
+    left: auto;
+    right: auto;
+    bottom: 20px;
+  }
+  font-size: 24px;
+  color:#DFBA69;
+  font-weight: bold;
+  text-shadow: 1px 1px rgba(255,128,0,.7);
+}
+
+#disclaimer { 
+  font-size: .8em;
+  color:#ccc; 
+  width: 230px;
+  margin: auto auto;
+  padding-right: 40px; //nudge nudge
+}
+
+// ------------ USER SIGNED IN STUFF
 h1{
   font-weight:normal;
   padding-bottom:10px;
@@ -40,25 +159,10 @@ h1{
   padding-left:10px;
   font-weight:bold;
 }
-
-#footer{
-padding-top:30px;
-  clear:both;
-  padding-top:70px;
-  text-align:center;
-  font-size:13px;
-}
-
 #profileImg{
   padding-left:15px;
 }
 
-#container{
-  padding-top:100px;
-  width:700px;
-  margin-left:auto;
-  margin-right:auto;
-}
 #leftside{
   font-size:64px;
 /*  float:left;  */
@@ -68,88 +172,8 @@ left:175px;
 top:40px;
 }
 
-#headline{
-  font-size:29px;
-  font-family:Verdana, sans-serif;
-  text-align:center;
-  position:absolute;
-  left:200px;
-  top:160px;
-}
 
-#blurb{
-  font-size:14px;
-  font-family:Verdana, sans-serif;
-  text-align:left;
-  font-style:italic;
-  position:absolute;
-  line-height: 130%;
-  padding-bottom:40px;
-  left:200px;
-  top:270px;
-}
-
-#start{
-  font-size: 24px;
-  position:absolute;
-  top:430px;
-  left:200px;
-  color:#DFBA69;
-  font-weight: bold;
-  text-shadow: 1px 1px rgba(255,128,0,.7);
-  padding-left:85px;
-}
-
-#login{
-position:absolute;
-top:474px;
-left:200px;
-padding-bottom:-10px;
-}
-
-#rightside{  
-  padding-top:100px;
-  padding-left:550px;
-  float:left;  
-}
-
-
-.slideshow{
-  bottom:40px;
-  left: 150px;
-  position:relative;
-}
-
-
-#disclaimer{
-  color:#ccc;
-  font-size:13px;
-  bottom:1px;
-  right:350px; 
-  position:relative;
-  margin-top:-25px;
-}
-
-body{
-  background-color: $backgroundColor;
-  color:$textColor;
-  font-family:Verdana;
-}
-
-.dotfm{
-  color:$dotfmColor;
-}
-
-a:link, a:visited, a:active{
-  color:#DFBA69;
-  text-decoration:none;
-}
-
-a:hover{
-  color:#DFBA69;
-  text-decoration:underline;
-}
-
+.dotfm{ color:$dotfmColor; }
 
 #info{
   font-family:Verdana;
@@ -158,10 +182,6 @@ a:hover{
   color:#46433A
 }
 
-img{
-  border:none;
-  vertical-align:middle;
-}
 
 /*Carousel stuff */
 
